Ejercicio1_2/Ejercicio1Parser.py
# Generated from Ejercicio1.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Ejercicio1Parser ( Parser ):

    grammarFileName = "Ejercicio1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'GUARDAR'", "'EN'", "';'", "'BUSCAR'", 
                     "'DONDE'", "'ACTUALIZAR'", "'CON'", "'ELIMINAR'", "'DE'", 
                     "'{'", "','", "'}'", "':'", "'<'", "'>'", "'=='", "'!='", 
                     "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOLEANO", "IDENTIFICADOR", "CADENA", "NUMERO", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_stCrear = 2
    RULE_stBuscar = 3
    RULE_stActualizar = 4
    RULE_stEliminar = 5
    RULE_objetoJson = 6
    RULE_parClaveValor = 7
    RULE_valor = 8
    RULE_condicion = 9

    ruleNames =  [ "programa", "sentencia", "stCrear", "stBuscar", "stActualizar", 
                   "stEliminar", "objetoJson", "parClaveValor", "valor", 
                   "condicion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    BOOLEANO=20
    IDENTIFICADOR=21
    CADENA=22
    NUMERO=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Ejercicio1Parser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ejercicio1Parser.SentenciaContext)
            else:
                return self.getTypedRuleContext(Ejercicio1Parser.SentenciaContext,i)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = Ejercicio1Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.sentencia()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 338) != 0)):
                    break

            self.state = 25
            self.match(Ejercicio1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stCrear(self):
            return self.getTypedRuleContext(Ejercicio1Parser.StCrearContext,0)


        def stBuscar(self):
            return self.getTypedRuleContext(Ejercicio1Parser.StBuscarContext,0)


        def stActualizar(self):
            return self.getTypedRuleContext(Ejercicio1Parser.StActualizarContext,0)


        def stEliminar(self):
            return self.getTypedRuleContext(Ejercicio1Parser.StEliminarContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = Ejercicio1Parser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.stCrear()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.stBuscar()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.stActualizar()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 30
                self.stEliminar()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StCrearContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objetoJson(self):
            return self.getTypedRuleContext(Ejercicio1Parser.ObjetoJsonContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(Ejercicio1Parser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_stCrear

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStCrear" ):
                listener.enterStCrear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStCrear" ):
                listener.exitStCrear(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStCrear" ):
                return visitor.visitStCrear(self)
            else:
                return visitor.visitChildren(self)




    def stCrear(self):

        localctx = Ejercicio1Parser.StCrearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stCrear)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(Ejercicio1Parser.T__0)
            self.state = 34
            self.objetoJson()
            self.state = 35
            self.match(Ejercicio1Parser.T__1)
            self.state = 36
            self.match(Ejercicio1Parser.IDENTIFICADOR)
            self.state = 37
            self.match(Ejercicio1Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StBuscarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(Ejercicio1Parser.IDENTIFICADOR, 0)

        def condicion(self):
            return self.getTypedRuleContext(Ejercicio1Parser.CondicionContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_stBuscar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStBuscar" ):
                listener.enterStBuscar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStBuscar" ):
                listener.exitStBuscar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStBuscar" ):
                return visitor.visitStBuscar(self)
            else:
                return visitor.visitChildren(self)




    def stBuscar(self):

        localctx = Ejercicio1Parser.StBuscarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stBuscar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(Ejercicio1Parser.T__3)
            self.state = 40
            self.match(Ejercicio1Parser.T__1)
            self.state = 41
            self.match(Ejercicio1Parser.IDENTIFICADOR)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 42
                self.match(Ejercicio1Parser.T__4)
                self.state = 43
                self.condicion()


            self.state = 46
            self.match(Ejercicio1Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StActualizarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(Ejercicio1Parser.IDENTIFICADOR, 0)

        def objetoJson(self):
            return self.getTypedRuleContext(Ejercicio1Parser.ObjetoJsonContext,0)


        def condicion(self):
            return self.getTypedRuleContext(Ejercicio1Parser.CondicionContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_stActualizar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStActualizar" ):
                listener.enterStActualizar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStActualizar" ):
                listener.exitStActualizar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStActualizar" ):
                return visitor.visitStActualizar(self)
            else:
                return visitor.visitChildren(self)




    def stActualizar(self):

        localctx = Ejercicio1Parser.StActualizarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stActualizar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(Ejercicio1Parser.T__5)
            self.state = 49
            self.match(Ejercicio1Parser.IDENTIFICADOR)
            self.state = 50
            self.match(Ejercicio1Parser.T__6)
            self.state = 51
            self.objetoJson()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 52
                self.match(Ejercicio1Parser.T__4)
                self.state = 53
                self.condicion()


            self.state = 56
            self.match(Ejercicio1Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StEliminarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(Ejercicio1Parser.IDENTIFICADOR, 0)

        def condicion(self):
            return self.getTypedRuleContext(Ejercicio1Parser.CondicionContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_stEliminar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStEliminar" ):
                listener.enterStEliminar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStEliminar" ):
                listener.exitStEliminar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStEliminar" ):
                return visitor.visitStEliminar(self)
            else:
                return visitor.visitChildren(self)




    def stEliminar(self):

        localctx = Ejercicio1Parser.StEliminarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stEliminar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(Ejercicio1Parser.T__7)
            self.state = 59
            self.match(Ejercicio1Parser.T__8)
            self.state = 60
            self.match(Ejercicio1Parser.IDENTIFICADOR)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 61
                self.match(Ejercicio1Parser.T__4)
                self.state = 62
                self.condicion()


            self.state = 65
            self.match(Ejercicio1Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjetoJsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parClaveValor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ejercicio1Parser.ParClaveValorContext)
            else:
                return self.getTypedRuleContext(Ejercicio1Parser.ParClaveValorContext,i)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_objetoJson

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjetoJson" ):
                listener.enterObjetoJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjetoJson" ):
                listener.exitObjetoJson(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjetoJson" ):
                return visitor.visitObjetoJson(self)
            else:
                return visitor.visitChildren(self)




    def objetoJson(self):

        localctx = Ejercicio1Parser.ObjetoJsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_objetoJson)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(Ejercicio1Parser.T__9)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 68
                self.parClaveValor()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 69
                    self.match(Ejercicio1Parser.T__10)
                    self.state = 70
                    self.parClaveValor()
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 78
            self.match(Ejercicio1Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParClaveValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(Ejercicio1Parser.CADENA, 0)

        def valor(self):
            return self.getTypedRuleContext(Ejercicio1Parser.ValorContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_parClaveValor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParClaveValor" ):
                listener.enterParClaveValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParClaveValor" ):
                listener.exitParClaveValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParClaveValor" ):
                return visitor.visitParClaveValor(self)
            else:
                return visitor.visitChildren(self)




    def parClaveValor(self):

        localctx = Ejercicio1Parser.ParClaveValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parClaveValor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(Ejercicio1Parser.CADENA)
            self.state = 81
            self.match(Ejercicio1Parser.T__12)
            self.state = 82
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(Ejercicio1Parser.CADENA, 0)

        def NUMERO(self):
            return self.getToken(Ejercicio1Parser.NUMERO, 0)

        def BOOLEANO(self):
            return self.getToken(Ejercicio1Parser.BOOLEANO, 0)

        def objetoJson(self):
            return self.getTypedRuleContext(Ejercicio1Parser.ObjetoJsonContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = Ejercicio1Parser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_valor)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(Ejercicio1Parser.CADENA)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(Ejercicio1Parser.NUMERO)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.match(Ejercicio1Parser.BOOLEANO)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.objetoJson()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def IDENTIFICADOR(self):
            return self.getToken(Ejercicio1Parser.IDENTIFICADOR, 0)

        def valor(self):
            return self.getTypedRuleContext(Ejercicio1Parser.ValorContext,0)


        def getRuleIndex(self):
            return Ejercicio1Parser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = Ejercicio1Parser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(Ejercicio1Parser.IDENTIFICADOR)
            self.state = 91
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 92
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





